[package]
name = "async-graphql-tide"
version = "2.1.7"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "async-graphql for tide"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/async-graphql-tide/"
homepage = "https://github.com/async-graphql/async-graphql"
repository = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
categories = ["network-programming", "asynchronous"]

[features]
default = ["unstable"]
unstable = ["tide-websockets"]
# Used for doc(cfg())
nightly = []

[dependencies]
async-graphql = { path = "../..", version = "=2.1.7" }
tide = { version = "0.15.0", default-features = false, features = ["h1-server"] }
tide-websockets = { git = "https://github.com/sunli829/tide-websockets", rev = "aa3aa6d", optional = true }
serde_json = "1.0.59"
futures-util = { version = "0.3.8", default-features = false }
async-trait = "0.1.41"

[dev-dependencies]
# Surf lacks multipart support
reqwest = { version = "0.10.8", default-features = false, features = ["json"] }
async-std = { version = "1.6.5", features = ["attributes", "tokio02"] }

[package.metadata.docs.rs]
features = ["nightly"]
